# boyer-moore-magiclen

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci-version.yml  ci.yml
benches/: full_text_latin_1.rs  full_text_search.rs  latin_1.rs  normal_text_search.rs  text_latin_1.rs
benches/full_text_search/: mod.rs
benches/full_text_search_lib/: mod.rs  utf8_width.rs
benches/normal_text_search_lib/: mod.rs
benches/search/: mod.rs  utf8_width.rs
benches/text_search/: mod.rs
src/: byte.rs  character.rs  latin_1.rs  lib.rs
tests/: character.rs  latin_1.rs  lib.rs  utf8.rs
tests/data/: character.txt  latin_1.txt  utf8.txt
