[package]
name = "boyer-moore-magiclen"
version = "0.1.6"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/boyer-moore-magiclen"
homepage = "https://magiclen.org/rust-boyer-moore-magiclen"
keywords = ["boyer-moore-magiclen", "boyer-moore-horspool", "quick-search", "string", "search"]
categories = ["algorithms"]
description= "Boyer-Moore-MagicLen, a fast string search algorithm implemented in Rust."
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "magiclen/boyer-moore-magiclen", branch = "master" }
appveyor = { repository = "magiclen/boyer-moore-magiclen", branch = "master", service = "github" }

[dependencies]
debug-helper = "0.1"

[dev-dependencies]
scanner-rust = "1.0.4"
criterion = "0.2.10"
regex = "1.1.5"
needle = "0.1.1"

[features]
nightly = []

[[bench]]
name = "full_text_search"
harness = false

[[bench]]
name = "normal_text_search"
harness = false