[package]
name = "boyer-moore-magiclen"
version = "0.2.9"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/boyer-moore-magiclen"
homepage = "https://magiclen.org/rust-boyer-moore-magiclen"
keywords = ["boyer-moore-magiclen", "boyer-moore-horspool", "quick-search", "string", "search"]
categories = ["no-std", "algorithms"]
description = "Boyer-Moore-MagicLen, a fast string search algorithm implemented in Rust."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "benches/full_text_search.rs", "benches/normal_text_search.rs"]

[badges.travis-ci]
repository = "magiclen/boyer-moore-magiclen"
branch = "master"

[dependencies]
debug-helper = "0.3"

[dev-dependencies]
scanner-rust = "2"
bencher = "0.1.5"
regex = "1.1.5"
utf8-width = "0.1"

[features]
character = []

[[bench]]
name = "full_text_search"
harness = false

[[bench]]
name = "normal_text_search"
harness = false